maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  setIndication(getX(),getY()-1)
               ^